--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/images/googlelogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/googlelogo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Google</title>
 </head>
@@ -20,7 +20,7 @@
     </nav>
 
     <main class="search">
-        <img src="/images/google.png" alt="Google">
+        <img src="./images/google.png" alt="Google">
         <div class="searchbar">
             <a class="search-icon" href="#"></a>
             <input class="search-input" type="text" autofocus="" title="Pesquisar">
